# keycloak-python-auth

./: .env  .gitignore  README.md  config.py  docker-compose.yaml  pyproject.toml  requirements.txt  setup.py
app/: __init__.py  auth.py  routes.py  views.py
app/templates/: index.html
demo_app/: __init__.py  app.py  config.py
demo_app/templates/: index.html
examples/flask/templates/: login.html
